@@ -12,6 +12,7 @@ OpenLDAP 2.4.41 Engineering
 	Fixed slapd syncrepl memory leaks (ITS#8035)
 	Fixed slapd syncrepl to free presentlist at end of refresh mode (ITS#8038)
 	Fixed slapd syncrepl to streamline presentlist (ITS#8042)
+	Fixed slapd segfault when using matched values control (ITS#8046)
 	Fixed slapd-mdb one-level search (ITS#7975)
 	Fixed slapd-mdb heap corruption (ITS#7965)
 	Fixed slapd-mdb crash after deleting in-use schema (ITS#7995)
@@ -32,6 +33,7 @@ OpenLDAP 2.4.41 Engineering
 		Fixed contrib/passwd/sha2 compiler warning (ITS#8000)
 		Fixed contrib/noopsrch compiler warning (ITS#7998)
 		Fixed contrib/dupent compiler warnings (ITS#7997)
+		Test suite: Added vrFilter test (ITS#8046)
 	Contrib
 		Added pbkdf2 sha256 and sha512 schemes (ITS#7977)
 		Fixed autogroup modification callback responses (ITS#6970)
